--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+}
+
 body {
     color: #fff; /* Set the font color to white */
     font-family: 'Roboto', sans-serif; /* Use a futuristic font */
