--- a/css/main.css
+++ b/css/main.css
@@ -37,13 +37,13 @@ body {
   }
 
   #quoteDisplay {
-    margin: 20px 0;
-    padding: 20px;
+    margin: 1.25rem 0;
+    padding: 1.25rem;
     background-color: rgba(133, 229, 238, 0.281);
-    border-radius: 10px;
-    box-shadow: 0 0 5px rgba(131, 238, 255, 3);
+    border-radius: 0.625rem;
+    box-shadow: 0 0 0.313rem rgba(131, 238, 255, 3);
     text-align: center;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
     color: white;
   }
